REFACTOR : C Style(Struct) -> C(Struct) + C++ Style(Class) 기존 Struct에서 Class 추가 및 전체적인 코드 수정 및 분할 구현 . . DOCS: Again reconfigure category 다시 카테고리 재구성 및 헤더 연결 default -> phone_book.h 재구성 ㄴ> phone_book.h(선언) phone_book.cpp(정의) 재구성 ㄴ> main 함수 파일 main_phone_book.cpp 재구성 phone_book.h -> show\show.h, search\search.h, create\create.h . . . 헤더 연결 ㄴ> phone_book.h(선언) _show.cpp, _search.cpp, _create.cpp . . .(정의) 재구성 . . DOCS: Again reconfigure VS code environment 다시 카테고리 재구성으로 인한 VS code 환경 재구성(tasks.json 수정) . . REFACTOR : . . . 동적 할당 및 해제 C Style -> C++ Style(malloc, free -> new, delete)
Class 추가로
프로그램 시작 시 생성자 호출로 변수 초기화
프로그램 종료 또는 전체삭제 시 소멸자 호출로 동적 할당 해제
접근 제한 지정자로 변수 및 주 함수 접근 제한
주 함수 기능 분할(Search 3개 Create 3개 Update 2개 Delete 1개 DeleteAll 1개 분할)

전역 변수 g_idx 삭제(기존 인덱스 순서 역할은 _show.cpp에서 정렬 기능과 함께 추가)

enum 상수명만 삭제

이름 주소 버퍼 사이즈 지정 상수 추가(name_max_len, number_max_len)

기존 출력 버퍼 비우기에 입력 버퍼 비우기 추가(rewind)

기타 등등 수정 및 추가

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,13 +8,7 @@
 			"args": [
 				"-fdiagnostics-color=always",
 				"-g",
-				"${file}",
-				"${fileDirname}\\show\\*.cpp",
-				"${fileDirname}\\search\\*.cpp",
-				"${fileDirname}\\create\\*.cpp",
-				"${fileDirname}\\update\\*.cpp",
-				"${fileDirname}\\delete\\*.cpp",
-				"${fileDirname}\\delete_all\\*.cpp",
+				"${fileDirname}\\*.cpp",
 				"-o",
 				"${fileDirname}\\${fileBasenameNoExtension}.exe",
 				"-I",
